add image and changes to color styling

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #6a0dad;
+    background-color: #F4E9F5;
     color: white;
     padding: 20px;
     text-align: center;
